Modify api and impl for better fakeplayer behavior